syntax = "proto3";

package ixo.zkproof.v1beta;

option go_package = "github.com/ixofoundation/ixo-blockchain/v5/x/zkproof/types";

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";

// MsgSubmitProof is used to submit a zk proof
message MsgSubmitProof {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1;
  string claim_type = 2;
  string proof_data = 3;
  string public_input = 4;
}

// MsgSubmitProofResponse is the response returned after submitting a proof
message MsgSubmitProofResponse {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;

  string status = 1;
}

// Msg defines the zkProof service
service Msg {
  rpc SubmitProof(MsgSubmitProof) returns (MsgSubmitProofResponse);
}
